--- a/pages/17973.html
+++ b/pages/17973.html
@@ -872,7 +872,7 @@ margin-left: 0em;
 <li><a href='#higgs_mechanism'>Higgs mechanism</a></li>
 <li><a href='#Orientifolding'>RR-Tadpole cancellation and Orientifolding</a></li>
 <li><a href='#IntersectionOfD6WithO8'>Intersections of D6s with D8/O8s</a></li>
-<li><a href='#relation_to_mtheory_on_manifolds'>Relation to M-theory on <math class='maruku-mathml' display='inline' id='mathml_428dc04867d040b9e9d8c256253ebd3835e0ff47_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</a></li>
+<li><a href='#relation_to_mtheory_on_manifolds'>Relation to M-theory on <math class='maruku-mathml' display='inline' id='mathml_f067a17515d246c8d4ced71c2d6aa679d52f5a40_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</a></li>
 <li><a href='#Cosmology'>Cosmology</a></li>
 </ul>
 <li><a href='#references'>References</a></li>
@@ -913,7 +913,7 @@ margin-left: 0em;
 
 <p>One of the most striking special properties of the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> is that its content of <a class='existingWikiWord' href='/nlab/show/fermionic'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/fundamental+particles'>fundamental particles</a> is “chiral”, in that the the left and right <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl spinor</a>-components of the would-be <a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac spinor</a>-representation of the <a class='existingWikiWord' href='/nlab/show/quarks'>quarks</a>, <a class='existingWikiWord' href='/nlab/show/electrons'>electrons</a> and <a class='existingWikiWord' href='/nlab/show/neutrinos'>neutrinos</a> couple <em>differently</em> to the <a class='existingWikiWord' href='/nlab/show/gauge+fields'>gauge fields</a> (for review see e.g. <a href='#IbanezUranga12'>Ibanez-Uranga 12, section 1.1</a>).</p>
 
-<p>The observation that such <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>chiral fermions</a> do indeed appear when <a class='existingWikiWord' href='/nlab/show/D6-branes'>D6-branes</a> <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> at an angle on an <math class='maruku-mathml' display='inline' id='mathml_428dc04867d040b9e9d8c256253ebd3835e0ff47_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>3</mn><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3,1}</annotation></semantics></math> is due to (<a href='#BerkoozDouglasLeigh96'>Berkooz-Douglas-Leigh 96</a>), see also (<a href='#AFIRU00'>AFIRU 00, section 4</a>, <a href='#BCLS05'>BCLS 05, section 2.3</a>).</p>
+<p>The observation that such <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>chiral fermions</a> do indeed appear when <a class='existingWikiWord' href='/nlab/show/D6-branes'>D6-branes</a> <a class='existingWikiWord' href='/nlab/show/brane+intersection'>intersect</a> at an angle on an <math class='maruku-mathml' display='inline' id='mathml_f067a17515d246c8d4ced71c2d6aa679d52f5a40_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mrow><mn>3</mn><mo>,</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^{3,1}</annotation></semantics></math> is due to (<a href='#BerkoozDouglasLeigh96'>Berkooz-Douglas-Leigh 96</a>), see also (<a href='#AFIRU00'>AFIRU 00, section 4</a>, <a href='#BCLS05'>BCLS 05, section 2.3</a>).</p>
 
 <p><img src='https://ncatlab.org/nlab/files/D6BranesIntersectingAtAnAngle.png' width='650'/></p>
 
@@ -927,7 +927,7 @@ margin-left: 0em;
 
 <p>While (presently) intersecting D-brane models don’t explain why there are <em>precisely</em> 3 <a class='existingWikiWord' href='/nlab/show/generations+of+fundamental+particles'>generations of fundamental particles</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, they do have the property that generically any such model does feature several <a class='existingWikiWord' href='/nlab/show/generations+of+fundamental+particles'>generations of fundamental particles</a>.</p>
 
-<p>The reason is that in these models there is one copy of a set of fundamental particles at each intersection point of two 3-manifolds (the internal part of the D6-branes) in a compact 6-dimensional space, and generically these intersection numbers are greater than one and hence induce a finite number of <a class='existingWikiWord' href='/nlab/show/generations+of+fundamental+particles'>generations of fundamental particles</a> (<a href='#BCLS05'>BCLS 05, section 2.3</a>, <a href='#IbanezUranga12'>Ibanez-Uranga 12, p. 307</a>, <a href='#Uranga12a'>Uranga 12a, p. 12</a>):</p>
+<p>The reason is that in these models there is one copy of a set of fundamental particles at each intersection point of two 3-manifolds (the internal part of the D6-branes) in a compact 6-dimensional space, and generically these intersection numbers are greater than one and hence induce a finite number of <a class='existingWikiWord' href='/nlab/show/generations+of+fundamental+particles'>generations</a> (<a href='#BCLS05'>BCLS 05, section 2.3</a>, <a href='#IbanezUranga12'>Ibanez-Uranga 12, p. 307</a>, <a href='#Uranga12a'>Uranga 12a, p. 12</a>):</p>
 
 <p><img src='https://ncatlab.org/nlab/files/Intersecting3CyclesInT6.png' width='500'/></p>
 
@@ -961,7 +961,7 @@ margin-left: 0em;
 <p>from <a href='#GKSTY02'>GKSTY 02</a></p>
 </blockquote>
 
-<p>If in addition the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> sits at an <a class='existingWikiWord' href='/nlab/show/O8-plane'>O8-plane</a>, hence at the <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifold</a> <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a>-locus (see <a href='#Orientifolding'>above</a>), then in the ordinary <math class='maruku-mathml' display='inline' id='mathml_428dc04867d040b9e9d8c256253ebd3835e0ff47_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z}/2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/quotient'>quotient</a> it appears as a “<a class='existingWikiWord' href='/nlab/show/half-brane'>half-brane</a>” with only one copy of <a class='existingWikiWord' href='/nlab/show/D6-branes'>D6-branes</a> ending on it:</p>
+<p>If in addition the <a class='existingWikiWord' href='/nlab/show/black+brane'>black</a> <a class='existingWikiWord' href='/nlab/show/NS5-brane'>NS5-brane</a> sits at an <a class='existingWikiWord' href='/nlab/show/O8-plane'>O8-plane</a>, hence at the <a class='existingWikiWord' href='/nlab/show/orientifold'>orientifold</a> <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a>-locus (see <a href='#Orientifolding'>above</a>), then in the ordinary <math class='maruku-mathml' display='inline' id='mathml_f067a17515d246c8d4ced71c2d6aa679d52f5a40_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>/</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathbb{Z}/2</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/quotient'>quotient</a> it appears as a “<a class='existingWikiWord' href='/nlab/show/half-brane'>half-brane</a>” with only one copy of <a class='existingWikiWord' href='/nlab/show/D6-branes'>D6-branes</a> ending on it:</p>
 
 <p><img src='https://ncatlab.org/nlab/files/HalfNS5II.jpg' width='400'/></p>
 
@@ -995,13 +995,13 @@ margin-left: 0em;
 <p>from <a href='#HananyZaffaroni98'>Hanany-Zaffaroni 98</a></p>
 </blockquote>
 
-<h3 id='relation_to_mtheory_on_manifolds'>Relation to M-theory on <math class='maruku-mathml' display='inline' id='mathml_428dc04867d040b9e9d8c256253ebd3835e0ff47_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</h3>
+<h3 id='relation_to_mtheory_on_manifolds'>Relation to M-theory on <math class='maruku-mathml' display='inline' id='mathml_f067a17515d246c8d4ced71c2d6aa679d52f5a40_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>G_2</annotation></semantics></math>-manifolds</h3>
 
 <p>For lift to <a class='existingWikiWord' href='/nlab/show/M-theory+on+G2-manifolds'>M-theory on G2-manifolds</a> (e.g. <a class='existingWikiWord' href='/nlab/show/G2-MSSM'>G2-MSSM</a>): e.g. <a href='#BCLS05'>BCLS 05, section 2.9</a></p>
 
 <h3 id='Cosmology'>Cosmology</h3>
 
-<p>Since the <a class='existingWikiWord' href='/nlab/show/near+horizon+geometry'>near horizon geometry</a> of <a class='existingWikiWord' href='/nlab/show/black+branes'>black branes</a> is the <a class='existingWikiWord' href='/nlab/show/Cartesian+product'>Cartesian product</a> of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spaces'>anti de Sitter spaces</a> with the unit <math class='maruku-mathml' display='inline' id='mathml_428dc04867d040b9e9d8c256253ebd3835e0ff47_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-sphere around the brane, the <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a> of these intersecting D-brane models realizes the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> on the asymptotic boundary of an <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a>. Models roughly of this kind are known as <a class='existingWikiWord' href='/nlab/show/Randall-Sundrum+models'>Randall-Sundrum models</a> (see for instance <a href='#Kaloper04'>Kaloper 04</a>, <a href='#FlachiMinamitsuji09'>Flachi-Minamitsuji 09</a>).</p>
+<p>Since the <a class='existingWikiWord' href='/nlab/show/near+horizon+geometry'>near horizon geometry</a> of <a class='existingWikiWord' href='/nlab/show/black+branes'>black branes</a> is the <a class='existingWikiWord' href='/nlab/show/Cartesian+product'>Cartesian product</a> of <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spaces'>anti de Sitter spaces</a> with the unit <math class='maruku-mathml' display='inline' id='mathml_f067a17515d246c8d4ced71c2d6aa679d52f5a40_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-sphere around the brane, the <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a> of these intersecting D-brane models realizes the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> on the asymptotic boundary of an <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a>. Models roughly of this kind are known as <a class='existingWikiWord' href='/nlab/show/Randall-Sundrum+models'>Randall-Sundrum models</a> (see for instance <a href='#Kaloper04'>Kaloper 04</a>, <a href='#FlachiMinamitsuji09'>Flachi-Minamitsuji 09</a>).</p>
 
 <h2 id='references'>References</h2>
 
@@ -1073,7 +1073,7 @@ margin-left: 0em;
 
 <ul>
 <li id='AFIRU00'>
-<p>G. Aldazabal, S. Franco, L. E. Ibanez, R. Rabadan, A. M. Uranga, <em><math class='maruku-mathml' display='inline' id='mathml_428dc04867d040b9e9d8c256253ebd3835e0ff47_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D=4</annotation></semantics></math> Chiral String Compactifications from Intersecting Branes</em>, J.Math.Phys.42:3103-3126, 2001 (<a href='https://arxiv.org/abs/hep-th/0011073'>arXiv:hep-th/0011073</a>)</p>
+<p>G. Aldazabal, S. Franco, L. E. Ibanez, R. Rabadan, A. M. Uranga, <em><math class='maruku-mathml' display='inline' id='mathml_f067a17515d246c8d4ced71c2d6aa679d52f5a40_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding='application/x-tex'>D=4</annotation></semantics></math> Chiral String Compactifications from Intersecting Branes</em>, J.Math.Phys.42:3103-3126, 2001 (<a href='https://arxiv.org/abs/hep-th/0011073'>arXiv:hep-th/0011073</a>)</p>
 </li>
 
 <li>
@@ -1105,7 +1105,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Jill Ecker, <a class='existingWikiWord' href='/nlab/show/Gabriele+Honecker'>Gabriele Honecker</a>, Wieland Staessens, <em>D6-Brane Model Building on <math class='maruku-mathml' display='inline' id='mathml_428dc04867d040b9e9d8c256253ebd3835e0ff47_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2 \times \mathbb{Z}_6</annotation></semantics></math>: MSSM-like and Left-Right Symmetric Models</em>, Nuclear Physics B Volume 901, December 2015, Pages 139-215, (<a href='https://arxiv.org/abs/1509.00048'>arXiv:1509.00048</a>)</p>
+<p>Jill Ecker, <a class='existingWikiWord' href='/nlab/show/Gabriele+Honecker'>Gabriele Honecker</a>, Wieland Staessens, <em>D6-Brane Model Building on <math class='maruku-mathml' display='inline' id='mathml_f067a17515d246c8d4ced71c2d6aa679d52f5a40_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub><mo>×</mo><msub><mi>ℤ</mi> <mn>6</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2 \times \mathbb{Z}_6</annotation></semantics></math>: MSSM-like and Left-Right Symmetric Models</em>, Nuclear Physics B Volume 901, December 2015, Pages 139-215, (<a href='https://arxiv.org/abs/1509.00048'>arXiv:1509.00048</a>)</p>
 </li>
 </ul>
 
@@ -1154,14 +1154,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 29, 2018 at 04:57:44.
+  Last revised on August 29, 2018 at 10:21:09.
   See the <a href="https://ncatlab.org/nlab/history/intersecting D-brane model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/intersecting+D-brane+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/intersecting+D-brane+model/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/intersecting+D-brane+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/intersecting+D-brane+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/intersecting D-brane model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
