--- a/pages/2682.html
+++ b/pages/2682.html
@@ -634,7 +634,7 @@ margin-left: 0em;
 
 <p>One widely studied class of modli-stabilized solutions to the string-theory background equations is that of <strong><a class='existingWikiWord' href='/nlab/show/flux+compactifications'>flux compactifications</a></strong>.</p>
 
-<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+manifold'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR-field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/fluxes'>fluxes</a></em> .</p>
+<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+manifold'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR-field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/fluxes'>fluxes</a></em> .</p>
 
 <p>The presence of this <a class='existingWikiWord' href='/nlab/show/RR-field'>RR-field</a> in the solution induces an effective potential for the scalar moduli fields that parameterize the geometry of CY. Hence by choosing the <a class='existingWikiWord' href='/nlab/show/RR-field'>RR-field</a> suitably one can find classical solutions in which all these moduli have values that are constant in time.</p>
 
@@ -856,7 +856,7 @@ margin-left: 0em;
 
 <p>The articles <a href='#LercheLustSchellekens86'>Lerche-Lüst-Schellekens 86</a>, <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a>, and the speech <a href='#Schellekens98'>Schellekens 98</a>, did not cause much of excitement then. Also they did not discuss <a class='existingWikiWord' href='/nlab/show/moduli+stabilization'>moduli stabilization</a>, which could still have been thought to reduce the number of vacua. Excitement was only later caused instead by more vague discussion of flux compactification vacua with moduli stabilization in type IIB string theory:</p>
 
-<p>That there are <math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
+<p>That there are <math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Raphael+Bousso'>Raphael Bousso</a>, <a class='existingWikiWord' href='/nlab/show/Joseph+Polchinski'>Joseph Polchinski</a>, <em>Quantization of Four-form Fluxes and Dynamical Neutralization of the Cosmological Constant</em> (<a href='http://arxiv.org/abs/hep-th/0004134'>arXiv:hep-th/0004134</a>)</li>
@@ -894,7 +894,7 @@ margin-left: 0em;
 
 <p>(Beware that the approach of <a href='#KKLT03'>KKLT 03</a> is argued to be false in <a href='#Danielsson-VanRiet18'>DanielssonVanRiet 18</a> and is being abandoned in <a href='#ObiedOoguriSpodyneikoVafa18'>Obied-Ooguri-Spodyneiko-Vafa 18</a>, <a href='#de+Sitter+spacetime#BDDGS18'>Danielsson et. al 18</a>).</p>
 
-<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
+<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
 
 <ul>
 <li id='Douglas04'>
@@ -916,7 +916,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Suyay+Ashok'>Suyay Ashok</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Douglas'>Michael Douglas</a>, <em>Counting flux vacua</em>, JHEP, vol. 0401, p. 060, 2004</li>
 </ul>
 
-<p>had considered <math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
+<p>had considered <math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
 
 <p>A review of the issue of flux compactifications is in</p>
 
@@ -946,7 +946,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Tom+Banks'>Tom Banks</a>, <em>The Top <math class='maruku-mathml' display='inline' id='mathml_08025d8fb61b450674641e47cba943e69aae7953_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math> Reasons Not to Believe in the Landscape</em> (<a href='https://arxiv.org/abs/1208.5715'>arXiv:1208.5715</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Tom+Banks'>Tom Banks</a>, <em>The Top <math class='maruku-mathml' display='inline' id='mathml_d4f2c876a83cae7f5e0413a58e983611291adddc_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math> Reasons Not to Believe in the Landscape</em> (<a href='https://arxiv.org/abs/1208.5715'>arXiv:1208.5715</a>)</p>
 </li>
 
 <li>
@@ -955,6 +955,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/David+Kutasov'>David Kutasov</a>, Travis Maxfield, Ilarion Melnikov, <a class='existingWikiWord' href='/nlab/show/Savdeep+Sethi'>Savdeep Sethi</a>, <em>Constraining de Sitter Space in String Theory</em>, Phys. Rev. Lett. 115, 071305 (2015) (<a href='https://arxiv.org/abs/1504.00056'>arXiv:1504.00056</a>)</p>
+</li>
+
+<li>
+<p>Jakob Moritz, Ander Retolaza, Alexander Westphal, <em>Towards de Sitter from 10D</em>, Phys. Rev. D 97, 046010 (2018) (<a href='https://arxiv.org/abs/1707.08678'>arXiv:1707.08678</a>)</p>
 </li>
 
 <li id='Sethi17'>
@@ -993,24 +997,18 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Frederik+Denef'>Frederik Denef</a>, Arthur Hebecker, Timm Wrase, <em>The dS swampland conjecture and the Higgs potential</em> (<a href='https://arxiv.org/abs/1807.06581'>arXiv:1807.06581</a>)</p>
 </li>
 </ul>
-
-<p>But then:</p>
-
-<ul>
-<li>Jakob Moritz, Ander Retolaza, Alexander Westphal, <em>Towards de Sitter from 10D</em>, Phys. Rev. D 97, 046010 (2018) (<a href='https://arxiv.org/abs/1707.08678'>arXiv:1707.08678</a>)</li>
-</ul>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on August 29, 2018 at 11:16:54.
+  Last revised on August 29, 2018 at 13:18:37.
   See the <a href="https://ncatlab.org/nlab/history/landscape of string theory vacua" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/47" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(47 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/landscape of string theory vacua/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
