--- a/pages/16201.html
+++ b/pages/16201.html
@@ -1088,19 +1088,32 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
 
 <h2 id='idea'>Idea</h2>
 
-<p>In the context of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> (<a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>), <em>higher curvature corrections</em> are modificatiosn of the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> that include not just the linear appearance of the <a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a> <math class='maruku-mathml' display='inline' id='mathml_2b626b8c5b0c9836ebccd8808ac8580b18d95358_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> but higher scalar powers of the <a class='existingWikiWord' href='/nlab/show/Riemann+curvature+tensor'>Riemann curvature tensor</a>.</p>
+<p>In the context of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> (<a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>), <em>higher curvature corrections</em> are modificatiosn of the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> that include not just the linear appearance of the <a class='existingWikiWord' href='/nlab/show/scalar+curvature'>scalar curvature</a> <math class='maruku-mathml' display='inline' id='mathml_598becc02f76f1cf15c5d30c244edce178eac594_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> but higher scalar powers of the <a class='existingWikiWord' href='/nlab/show/Riemann+curvature+tensor'>Riemann curvature tensor</a>.</p>
 
 <p>When viewing Einstein-Hilbert <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a> as an <a class='existingWikiWord' href='/nlab/show/effective+field+theory'>effective field theory</a> valid at low energy, then higher curvature corrections are precisely the terms that may appear at higher energy in pure gravity. Notably the effective field theories induced by <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> come with infinite towers of higher curvature corrections.</p>
 
 <p>In the context of <a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a>, higher curvature corrections are a candidate for the <a class='existingWikiWord' href='/nlab/show/inflaton+field'>inflaton field</a>, see at <em><a class='existingWikiWord' href='/nlab/show/Starobinsky+model+of+cosmic+inflation'>Starobinsky model of cosmic inflation</a></em>.</p>
 
 <p>A <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> that extremizes the <a class='existingWikiWord' href='/nlab/show/Einstein-Hilbert+action'>Einstein-Hilbert action</a> for given <a class='existingWikiWord' href='/nlab/show/cosmological+constant'>cosmological constant</a> and <em>arbitrary</em> higher curvature correction is called a <em><a class='existingWikiWord' href='/nlab/show/universal+spacetime'>universal spacetime</a></em>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/universal+spacetime'>universal spacetime</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>non-perturbative effect</a></p>
+</li>
+</ul>
 
 <h2 id='references'>References</h2>
 
@@ -1132,7 +1145,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Dimitrios+Tsimpis'>Dimitrios Tsimpis</a>, <em>11D supergravity at <math class='maruku-mathml' display='inline' id='mathml_2b626b8c5b0c9836ebccd8808ac8580b18d95358_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo stretchy='false'>(</mo><msup><mi>ℓ</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{O}(\ell^3)</annotation></semantics></math></em>, JHEP0410:046, 2004 (<a href='https://arxiv.org/abs/hep-th/0407271'>arXiv:hep-th/0407271</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Dimitrios+Tsimpis'>Dimitrios Tsimpis</a>, <em>11D supergravity at <math class='maruku-mathml' display='inline' id='mathml_598becc02f76f1cf15c5d30c244edce178eac594_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒪</mi><mo stretchy='false'>(</mo><msup><mi>ℓ</mi> <mn>3</mn></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{O}(\ell^3)</annotation></semantics></math></em>, JHEP0410:046, 2004 (<a href='https://arxiv.org/abs/hep-th/0407271'>arXiv:hep-th/0407271</a>)</p>
 </li>
 
 <li>
@@ -1147,14 +1160,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on August 30, 2018 at 13:43:29.
+  Last revised on August 30, 2018 at 14:23:56.
   See the <a href="https://ncatlab.org/nlab/history/higher curvature correction" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/higher+curvature+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+curvature+correction/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/higher+curvature+correction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+curvature+correction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/higher+curvature+correction" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+curvature+correction/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/higher+curvature+correction" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+curvature+correction" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/higher curvature correction/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
