--- a/pages/17150.html
+++ b/pages/17150.html
@@ -554,26 +554,32 @@ margin-left: 0em;
 
 <p>on <a class='existingWikiWord' href='/nlab/show/global+equivariant+stable+homotopy+theory'>global equivariant stable homotopy theory</a> in terms of <a class='existingWikiWord' href='/nlab/show/orthogonal+spectra'>orthogonal spectra</a>.</p>
 
-<p>(The reader interested only in plain <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a> takes the collection <math class='maruku-mathml' display='inline' id='mathml_6909ed4f8d82155c793ba0edf73dec26f5b4eb93_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℱ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{F}</annotation></semantics></math> of groups on p. viii to be trivial throughout, to get just the theory of non-equivariant <a class='existingWikiWord' href='/nlab/show/orthogonal+spectra'>orthogonal spectra</a>. See also the Schwede’s lecture notes on <em><a class='existingWikiWord' href='/nlab/show/Symmetric+spectra'>Symmetric spectra</a></em>.)</p>
+<p>(The reader interested only in plain <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a> takes the collection <math class='maruku-mathml' display='inline' id='mathml_add84130bd63778db252d95a9b48da91a054028f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℱ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{F}</annotation></semantics></math> of groups on p. viii to be trivial throughout, to get just the theory of non-equivariant <a class='existingWikiWord' href='/nlab/show/orthogonal+spectra'>orthogonal spectra</a>. See also the Schwede’s lecture notes on <em><a class='existingWikiWord' href='/nlab/show/Symmetric+spectra'>Symmetric spectra</a></em>.)</p>
 
 <p>See also</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Stefan+Schwede'>Stefan Schwede</a>, <em><a class='existingWikiWord' href='/nlab/show/Lectures+on+Equivariant+Stable+Homotopy+Theory'>Lectures on Equivariant Stable Homotopy Theory</a></em></li>
 </ul>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_add84130bd63778db252d95a9b48da91a054028f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/orbifold+cohomology'>orbifold cohomology</a></li>
+</ul>
 <div class='property'>category: <a class='category_link' href='/nlab/all_pages/reference'>reference</a></div>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September  1, 2018 at 04:41:13.
+  Last revised on September  2, 2018 at 08:29:09.
   See the <a href="https://ncatlab.org/nlab/history/Global homotopy theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Global+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+homotopy+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Global+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Global+homotopy+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Global+homotopy+theory/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Global+homotopy+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Global+homotopy+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Global homotopy theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
